# Pollux

./: .gitignore  POLLUX_REPORT.md  README.md  pyproject.toml
desinstaller/: README.md
desinstallers/: README.md  bash.sh  powershell.ps1
infras/: README.md
infras/VM_or_Servers/Debian 12.9 - Database and Production/: debian_setup.sh
infras/VM_or_Servers/Ubuntu 24.04.1 - Database and Production/: ubuntu_setup.sh
installers/: README.md  bash.sh  batch.bat  powershell.ps1
pollux/: README.md  __init__.py  config.py  initialize.py  main.py  utils.py
pollux/antivirusCheck/: antivirusCheck.sh
pollux/report/: final_rep_gen.py  md_to_pdf.py
pollux/scripts/: README.md
pollux/scripts/antivirusCheck/: README.md  antivirusCheck.ps1  antivirusCheck.sh
pollux/scripts/envvarCheck/: README.md  envvarCheck.ps1  envvarCheck.sh
pollux/scripts/filesystemCheck/: README.md  filesystemCheck.ps1  filesystemCheck.sh
pollux/scripts/firewallCheck/: README.md  firewallCheck.ps1  firewallCheck.sh
pollux/scripts/passwordCheck/: README.md  passwordCheck.ps1  passwordCheck.sh
pollux/scripts/plannedtaskCheck/: README.md  plannedtaskCheck.ps1  plannedtaskCheck.sh
pollux/scripts/portCheck/: README.md  portCheck.ps1  portCheck.sh
pollux/scripts/serviceCheck/: README.md  serviceCheck.ps1  serviceCheck.sh  servicesCheck.sh
pollux/scripts/sessionCheck/: README.md  sessionCheck.sh
pollux/scripts/sessionsCheck/: sessionCheck.ps1
pollux/scripts/updateCheck/: README.md  updateCheck.ps1  (+1 more)
pollux/wrapper/: initialize.py  lin_executors.py  utils.py  win_executors.py  wrapper.py
(+8 files in other folders)
